--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,82 @@
 *sync-conflicts*
 
+# webots gitignore
+
+# Global rules #
+################
+
+# Build directories
+build
+com
+webots_catkin_ws
+
+# Compiled source
+*.exe
+*.o
+*.d
+*.class
+*.so
+*.dylib
+*.dll
+*.lib
+*.a
+*.cof
+*.hex
+*.pyc
+*.gch
+
+# Packages
+*.7z
+*.bz2
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.xz
+*.zip
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+.directory
+ehthumbs.db
+Thumbs.db
+*.swp
+
+# Text editor backup files
+*~
+
+# Log files
+*.log
+
+# Blender cache
+*.blend1
+
+# Webots generated files
+*.cache
+
+# IDE files
+.vscode
+
+# Local rules #
+###############
+
+/.clang-format
+/msys64
+/webots
+/webots-controller
+/webots.lnk
+/webots_debug_output.txt
+/util
+
+# world thumbnail files
+.*.jpg
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,windows,macos,direnv,python,visualstudiocode,pycharm,pycharm+all,pycharm+iml,jetbrains+all,jetbrains,jetbrains+iml,vim,venv,virtualenv,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,windows,macos,direnv,python,visualstudiocode,pycharm,pycharm+all,pycharm+iml,jetbrains+all,jetbrains,jetbrains+iml,vim,venv,virtualenv,git
 
